--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,14 @@
     <script src="https://www.google.com/recaptcha/enterprise.js?render=6Lc007IpAAAAAKG6v0eFa2POcb6jKnIcy8Kr1ejr"></script> 
     <script>
         function onSubmit(token) {
-          document.getElementById("demo-form").submit();
+          document.getElementById("myLoginForm").submit();
         }
     </script>
 </head>
 <body>
   <div class="container">
     <h1 class="logo">Water monitor interface</h1>
-    <form class="login-form">
+    <form class="login-form" id="myLoginForm">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" placeholder= "Enter your username" required> <br> <br>
       <label for="password">Password:</label>
@@ -23,13 +23,12 @@
         <input type="checkbox" id="remember-me">
         <label for="remember-me">Remember Me</label> <br> <br>
       </div>
-      <!--<button >Login</button> <br> <br>-->
-      <a href="#">Forgot Password?</a>
-      <button type="submit" style="width: 275px; height: 50px;", class="g-recaptcha"
+      <button type="submit" style="width: 275px; height: 50px;" class="g-recaptcha"
         data-sitekey="6Lc007IpAAAAAKG6v0eFa2POcb6jKnIcy8Kr1ejr"
         data-callback='onSubmit'
         data-action='submit'>Login
       </button>
+      <a href="#">Forgot Password?</a>
     </form>
   </div>
   <!--<script src="main.js"></script> -->
