--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fancy Login</title>
-    <script src="https://www.google.com/recaptcha/enterprise.js?render=6Lc007IpAAAAAKG6v0eFa2POcb6jKnIcy8Kr1ejr"></script> 
-    <script>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6Lc007IpAAAAAKG6v0eFa2POcb6jKnIcy8Kr1ejr">
         function onSubmit(token) {
           document.getElementById("myLoginForm").submit();
         }
