--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,12 @@
         data-callback='onSubmit'
         data-action='submit'>Login
       </button>
-      <a href="#">Forgot Password?</a>
+      <a href="#">Forgot Password?</a> <br> <br>
+      <a href="http://163.13.127.50:5000/register">
+        <button style="width: 275px; height: 50px;">Create new account</button>
+      </a>
+      
+      
     </form>
   </div>
   <!--<script src="main.js"></script> -->
