--- a/templates/forget_passwd.html
+++ b/templates/forget_passwd.html
@@ -8,10 +8,10 @@
     <h1>Please enter your email to search for your account.</h1>
 
     <form action="/register" method="POST">
-        <label for="username">Username:</label>
+        <label for="email">Email:</label>
         <input type="text" id="username" name="username" required> <br>
-
-        <button style="width: 232px; height: 40px;" type="submit">Register</button>
+        <br>
+        <button style="width: 235px; height: 40px;" type="submit">Search</button>
     </form>
 </body>
 </html>
