--- a/templates/login.html
+++ b/templates/login.html
@@ -33,9 +33,10 @@
       <form>
         <button style="width: 275px; height: 50px;" formaction="http://163.13.127.50:5000/register">Create new account</button>
       </form>
-
+    
+      </form>
+      
     </form>
   </div>
-  <!--<script src="main.js"></script> -->
 </body>
 </html>
